# live-backgroundremoval-lite

./: .aiexclude  .clang-format  .editorconfig  .gersemirc  .gitattributes  .gitconfig.lint  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  Dockerfile.ubuntu-24.04  FAQ.md  GEMINI.md  GENERATED.md  LICENSE  README.md  REUSE.toml  SECURITY.md  buildspec.json  buildspec.json.license  requirements-build.txt  vcpkg-configuration.json  vcpkg.json
.devcontainer/: REUSE.toml
.github/: REUSE.toml  copilot-instructions.md  dependabot.yml  pull_request_template.md  pull_request_template.md.license
build-aux/: run-clang-format  run-gersemi
data/: REUSE.toml  manifest.json
docs/: .gitignore  astro.config.mjs  integrity.json  package-lock.json  package.json  svelte.config.js  tsconfig.json
pages/: .gitignore  REUSE.toml  astro.config.mjs  package-lock.json  package.json
resources/: de_DE.ts  (+2 more)
src/: AsyncTextureReader.hpp  CMakeLists.txt  DebugWindow.cpp  DebugWindow.hpp  MainEffect.hpp  MainPluginContext.cpp  MainPluginContext.h  MainPluginContext_c.cpp  MyCprSession.hpp  MyCprUtils.hpp  ObsLogger.hpp  Preset.hpp  RenderingContext.cpp  RenderingContext.hpp  SelfieSegmenter.hpp  TaskQueue.hpp  ThrottledTaskQueue.hpp  UpdateChecker.hpp  plugin-main.c  plugin-main.cpp  plugin-support.c.in  plugin-support.h
src/Async/: CMakeLists.txt  SharedTask.hpp  StaticTask.hpp  Task.hpp
src/Async/KaitoTokyo/Async/: Channel.hpp  Join.hpp  Task.hpp
src/BridgeUtils/: AsyncTextureReader.hpp  GsUnique.hpp  ILogger.hpp  ObsLogger.hpp  ObsUnique.hpp
src/Core/: CMakeLists.txt  DebugWindow.cpp  DebugWindow.hpp  FilterLevel.hpp  MainEffect.hpp  MainPluginContext.cpp  MainPluginContext.h  MainPluginContext_c.cpp  PluginConfig.hpp  PluginProperty.hpp  Preset.hpp  RenderingContext.cpp  RenderingContext.hpp
src/CurlHelper/: CMakeLists.txt  CurlUrlHandler.hpp  CurlUrlSearchParams.hpp  CurlVectorWriter.hpp
src/CurlHelper/KaitoTokyo/CurlHelper/: CurlHandle.hpp  CurlReadCallback.hpp  CurlSlistHandle.hpp  CurlUrlHandle.hpp  CurlUrlSearchParams.hpp  CurlWriteCallback.hpp
src/DebugWindow/: DebugWindow.cpp  DebugWindow.hpp
src/LiveBackgroundRemovalLite/: CMakeLists.txt
src/LiveBackgroundRemovalLite/AsyncSource/: AsyncSourceContext.cpp  AsyncSourceContext.hpp  AsyncSourceInfo.cpp  AsyncSourceInfo.hpp  CMakeLists.txt
src/LiveBackgroundRemovalLite/Filter/: CMakeLists.txt  DebugWindow.cpp  DebugWindow.hpp  MainEffect.hpp  MainPluginContext.cpp  MainPluginContext.h  MainPluginContext_c.cpp  PluginConfig.hpp  PluginProperty.hpp  RenderingContext.cpp  RenderingContext.hpp
src/LiveBackgroundRemovalLite/Global/: CMakeLists.txt  GlobalConfigDialog.cpp  GlobalConfigDialog.hpp  GlobalContext.cpp  GlobalContext.hpp  PluginConfig.cpp  PluginConfig.hpp  PluginConfigDialog.cpp  PluginConfigDialog.hpp  licenses.qrc
src/LiveBackgroundRemovalLite/GlobalContext/: CMakeLists.txt
src/LiveBackgroundRemovalLite/MainFilter/: CMakeLists.txt  DebugWindow.cpp  DebugWindow.hpp  MainEffect.hpp  MainFilterContext.cpp  MainFilterContext.hpp  MainFilterInfo.cpp  MainFilterInfo.hpp  MainPluginContext.cpp  MainPluginContext.h  MainPluginContext_c.cpp  PluginConfig.hpp  PluginProperty.hpp  RenderingContext.cpp  RenderingContext.hpp  TroubleshootDialog.cpp  TroubleshootDialog.hpp  mediapipe_selfie_segmentation_landscape_int8_ncnn_bin.c  mediapipe_selfie_segmentation_landscape_int8_ncnn_param.cpp
src/LiveBackgroundRemovalLite/StartupUI/: CMakeLists.txt  FirstRunDialog.cpp  FirstRunDialog.hpp  StartupController.cpp  StartupController.hpp
src/Logger/: CMakeLists.txt  ILogger.hpp  NullLogger.hpp
src/Logger/KaitoTokyo/Logger/: ILogger.hpp  MultiLogger.hpp  NullLogger.hpp  PrintLogger.hpp
src/Memory/: AlignedAllocator.hpp  AlignedMemoryResource.hpp  CMakeLists.txt  MemoryBlockPool.hpp
src/Memory/KaitoTokyo/Memory/: AlignedAllocator.hpp  MemoryBlockPool.hpp
src/ObsBridgeUtils/: CMakeLists.txt
src/ObsBridgeUtils/KaitoTokyo/ObsBridgeUtils/: AsyncTextureReader.hpp  GsUnique.hpp  ObsLogger.hpp  ObsUnique.hpp
src/PluginManager/: CMakeLists.txt  Sha256Calculator.cpp  UpdateChecker.cpp
src/PluginManager/KaitoTokyo/PluginManager/: Sha256Calculator.hpp  UpdateChecker.hpp
src/SelfieSegmenter/: Allocator.hpp  BoundingBox.cpp  BoundingBox.hpp  CMakeLists.txt  CoreMLSelfieSegmenter.hpp  CoreMLSelfieSegmenter.mm  ForceAlignmentResource.hpp  FrameExtractors.hpp  IFrameExtractor.hpp  ISelfieSegmenter.hpp  MaskBuffer.hpp  NcnnSelfieSegmenter.cpp  NcnnSelfieSegmenter.hpp  NullSelfieSegmenter.hpp  SelfieSegmenter.cpp  SelfieSegmenter.hpp  ShapeConverter.cpp  ShapeConverter.hpp  UyvyFrameExtractor.hpp
src/SelfieSegmenter/KaitoTokyo/SelfieSegmenter/: BoundingBox.cpp  BoundingBox.hpp  ISelfieSegmenter.hpp  MaskBuffer.hpp  NcnnSelfieSegmenter.hpp  NullSelfieSegmenter.hpp  ShapeConverter.cpp  ShapeConverter.hpp
src/SimpleJsonParser/: CMakeLists.txt
src/SimpleJsonParser/KaitoTokyo/SimpleJsonParser/: SimpleJsonReader.hpp
src/SimpleJsonReader/: CMakeLists.txt
src/SimpleJsonReader/KaitoTokyo/SimpleJsonReader/: SimpleJsonReader.hpp
src/TaskQueue/: AlignedMemoryResource.hpp  CMakeLists.txt  MemoryBlockPool.hpp  ThrottledTaskQueue.hpp
src/TaskQueue/KaitoTokyo/TaskQueue/: ThrottledTaskQueue.hpp
src/UpdateChecker/: CMakeLists.txt  UpdateChecker.hpp
src/VideoFrameExtractor/: IFrameExtractor.hpp  UYVYFrameExtractor.hpp
src/obs-bridge-utils/: ILogger.hpp  ObsLogger.hpp  gs_unique.hpp  unique_bfree.hpp
src/resources/: de_DE.qm  de_DE.ts  es_ES.qm  es_ES.ts  fr_FR.qm  fr_FR.ts  ja_JP.qm  ja_JP.ts  ko_KR.qm  ko_KR.ts  pt_BR.qm  pt_BR.ts  resources.qrc  ru_RU.qm  ru_RU.ts  zh_CN.qm  zh_CN.ts  zh_TW.qm  zh_TW.ts
tests/: CMakeLists.txt  MainPluginContext_test.cpp  NullLogger.hpp  Stub_test.cpp  Stub_test.mm  UpdateChecker_test.cpp
tests/SelfieSegmenter/: CoreMLSelfieSegmenter_test.cpp  NcnnSelfieSegmenter_test.cpp  SelfieSegmenter_test.cpp
tests/SimpleJsonReader/: SimpleJsonReader_test.cpp
tests/UpdateChecker/: UpdateChecker_test.cpp
tests/VideoFrameExtractor/: Fixture.hpp  UyvyFrameExtractor_test.cpp
(+287 files in other folders)
