# SPDX-FileCopyrightText: 2025-2026 Kaito Udagawa <umireon@kaito.tokyo>
#
# SPDX-License-Identifier: Apache-2.0

add_subdirectory(Async)
add_subdirectory(Logger)
add_subdirectory(Memory)

add_subdirectory(CurlHelper)
add_subdirectory(TaskQueue)
add_subdirectory(ObsBridgeUtils)

add_subdirectory(SelfieSegmenter)

add_subdirectory(PluginManager)

add_subdirectory(LiveBackgroundRemovalLite)
